@@ -39,6 +39,6 @@ public class AreaFunction extends AbstractFunction {
                     "Filter Function problem for function area argument #0 - expected type Geometry");
         }
 
-        return new Double(StaticGeometry.area(arg0));
+        return Double.valueOf(StaticGeometry.area(arg0));
     }
 }
